# loadout-server

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_v1  build.rs  empty  loadout-server.service
.cargo/: config.toml
.github/workflows/: publish.yml
src/: health_check.rs  main.rs  main_page.rs  old.rs  params.rs  redirect.rs  register.rs  retrieval.rs  socket.rs  state.rs
src/socket/: close.rs  mod.rs
src/state/: mod.rs
