[package]
name = "loadout-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
warp = "0.3"