[package]
name = "loadout-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dependencies]
anyhow = "1"
dotenv = "0.15"
chrono = "0.4"
fern = { version = "0.6", features = ["colored"] }
futures-util = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
warp = { version = "0.3", features = ["tls"] }